style: add loaders, refactor styles 💄

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -49,3 +49,7 @@ body {
   border-color: var(--rq-amber) !important;
   background-color: var(--rq-amber) !important;
 }
+
+.modal {
+  padding-left: 0 !important;
+}
