refactor: update components and pages 🎨

--- a/src/components/Option/Option.module.css
+++ b/src/components/Option/Option.module.css
@@ -12,6 +12,11 @@
   background-color: var(--rq-light-gray) !important;
 }
 
+.selectedOptionStyle {
+  border-color: var(--rq-black) !important;
+  background-color: var(--rq-amber) !important;
+}
+
 .correctOptionStyle {
   border-color: var(--rq-green) !important;
   background-color: var(--rq-green) !important;
