--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,7 @@
 .navigation {
   border-bottom: 0.1rem solid var(--rq-light-gray);
   background-color: var(--white);
+  z-index: 1036 !important;
 }
 
 .navBrand {
